--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./src/index.js",
-    "dev": "nodemon ./src/index.js"
+    "dev": "nodemon ./src/index.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -14,8 +15,9 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.5.2"
-  }, 
+  },
   "devDependencies": {
+    "jest": "^29.0.1",
     "nodemon": "^2.0.19"
   }
 }
